# Telegram_Client

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
tg_client/: apps.py  telegram_client.py
